<resources>
    <string name="app_name">Coffeehouse: Chess Timer</string>
    <string name="coffeehouse">Coffeehouse</string>
    <string name="title">Chess Timer</string>
    <string name="intro_message">Tap anywhere on screen to begin</string>
    <string name="timer1Text">Player 1</string>
    <string name="timer2Text">Player 2</string>
    <string name="initialClock">10:00:00</string>
    <string name="formatClock" formatted="true">%1$s:%2$s:%3$s</string>
    <string name="timeOut">Time\'s up!</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_confirm">Confirm</string>
    <string name="nav_cancel">Cancel</string>
    <string name="set_time_fragment">Time Settings</string>
    <string name="minutes">Minutes</string>
    <string name="interval">Interval</string>
    <string name="about">A style of play, in chess, characterised by bold and risky but often inaccurate play. Of course, this isn\'t you, right?</string>
    <string name="policy_title">Privacy Policy</string>
    <string name="policy">This application does not collect or store personal data.\n\nIf you installed this application from Google Play, then Google Play does collect some personal data. Please see the privacy policy for Google Play Services here: <a href="https://policies.google.com/privacy">Google Play\'s Policy</a></string>
</resources>