<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="?android:attr/detailsElementBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/coffeehouse"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_textView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="10dp"
            android:text="@string/about"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/privacy_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/policy_title"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/policy_TextView"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:padding="10dp"
            android:text="@string/policy"
            android:textSize="16sp" />

        <Button
            android:id="@+id/back_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:paddingHorizontal="50dp"
            android:text="@string/nav_close"
            android:textColor="@color/onPrimary"
            android:textSize="25sp"
            app:backgroundTint="@color/primary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>