<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#1f1a1d"
            android:textSize="38sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/timerSwapButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="timerSwapButtonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/timerSwapButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView">

            <TextView

                android:id="@+id/clock1"
                android:layout_width="355.5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/detailsElementBackground"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/timer2Text"
                android:textColor="#1f1a1d"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/clock2"
                android:layout_width="355.5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/detailsElementBackground"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/timer1Text"
                android:textColor="#1f1a1d"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>